# exposure-fusion

./: .gitignore  .gitignore.bak  CGProj.cpp  CMakeLists.txt  LICENSE.md  Pipfile  README.md  blend.py  exposure_fusion.py  hdr.h  main.py  orb-homography.py  requirements.txt  test.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: cvpr.sty  implement_module.txt  presentation.tex  ref.bib
gui/: exposure_fusion.py  gui.py  image_slider.py
presentation/: implement_module.txt  presentation.bbl  presentation.blg  presentation.fls  presentation.tex  ref.bib
presentation/1506/: rpn_pami_arxiv.tex
presentation/figures/: resizer.ipynb
to_ship/: README.md
to_ship/gui/: exposure_fusion.py  gui.py  image_slider.py
